# protide

./: .gitignore  CLAUDE.md  Cargo.toml  NOTES.md  PLAN.md  README.md  STATUS.md  TODO.md  UI_IMPROVEMENTS.md  install.sh
crates/api-dash/: Cargo.toml
crates/api-dash/src/: app.rs  main.rs  theme.rs
crates/api-dash/src/chaining/: mod.rs
crates/api-dash/src/codegen/: javascript.rs  mod.rs  rust.rs
crates/api-dash/src/export/: markdown.rs  mod.rs
crates/api-dash/src/import/: bruno.rs  mod.rs  openapi.rs
crates/api-dash/src/mock_server/: mod.rs  routes.rs
crates/api-dash/src/models/: mod.rs  request.rs
crates/api-dash/src/protocols/: grpc.rs  http.rs  mod.rs
crates/api-dash/src/scripting/: context.rs  mod.rs  results.rs
crates/api-dash/src/ui/: main_window.rs  mod.rs
crates/api-dash/src/ui/components/: button.rs  mod.rs  text_input.rs
crates/api-dash/src/ui/components/code_editor/: buffer.rs  highlight.rs  mod.rs  selection.rs
crates/api-dash/src/ui/panels/: explorer.rs  mock_server.rs  mod.rs  request.rs  request_types.rs  request_utils.rs  response.rs
crates/api-dash/src/ui/panels/request/: mod.rs  render.rs  tests.rs
crates/api-dash/src/workspace/: mod.rs
crates/http-parser/: Cargo.toml
crates/http-parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs
crates/protide/: Cargo.toml  build.rs
crates/protide-core/: Cargo.toml
crates/protide-core/src/: lib.rs
crates/protide-core/src/codegen/: curl.rs  go.rs  javascript.rs  python.rs  rust.rs
crates/protide-core/src/collection_runner/: data_driven.rs  mod.rs
crates/protide-core/src/execution/: http.rs  mod.rs  sio.rs  sio_codec.rs  ws.rs
crates/protide-core/src/export/: markdown.rs  mod.rs  openapi.rs
crates/protide-core/src/git/: branch.rs  mod.rs  remote.rs  stash.rs  status.rs
crates/protide-core/src/import/: bruno.rs  curl.rs  mod.rs  openapi.rs  postman.rs
crates/protide-core/src/import/openapi/: mod.rs  openapi_operations.rs  openapi_paths.rs  openapi_security.rs  schema.rs
crates/protide-core/src/mock_server/: mod.rs  routes.rs  server.rs
crates/protide-core/src/models/: environment.rs  mod.rs  request.rs
crates/protide-core/src/protocols/: grpc.rs  mod.rs  trpc.rs
crates/protide-core/src/protocols/grpc/: grpc_encoding.rs  grpc_streaming.rs  mod.rs
crates/protide-core/src/scripting/: mod.rs  results.rs  runtime.rs
crates/protide-core/src/scripting/runtime/: base64.rs  bindings.rs  expect_js.rs  mod.rs
crates/protide-core/src/sync/: crdt.rs  engine.rs  file_sync.rs  live_probe.rs  mod.rs  p2p.rs  pake.rs  types.rs
crates/protide-core/src/workspace/: mod.rs
crates/protide-lsp/: Cargo.toml
crates/protide-lsp/src/: backend.rs  code_actions.rs  completion.rs  diagnostics.rs  formatting.rs  hover.rs  inlay_hints.rs  main.rs  semantic_tokens.rs  symbols.rs  workspace.rs
crates/protide-mcp/: Cargo.toml
crates/protide-mcp/src/: main.rs
crates/protide-ui/: Cargo.toml  DESIGN.md
crates/protide-ui/src/: last_paths.rs  lib.rs  prefs.rs  session.rs  theme.rs
crates/protide-ui/src/components/: action_row.rs  icons.rs  mod.rs  modal.rs  selectable_text.rs  text_input.rs  text_view.rs  ui_helpers.rs
crates/protide-ui/src/components/code_editor/: buffer.rs  highlight.rs  mod.rs
crates/protide-ui/src/main_window/: codegen.rs  drag.rs  help.rs  mod.rs  overlays.rs  render.rs  render_response_strip.rs  render_sidebar.rs  statusbar.rs  sync.rs  titlebar.rs
crates/protide-ui/src/panels/: console.rs  history.rs  mod.rs  presence.rs  presence_render.rs  presence_render_flyout.rs  request_types.rs  request_utils.rs
crates/protide-ui/src/panels/console/: entry.rs  mod.rs  render.rs  rows.rs
crates/protide-ui/src/panels/docs/: mod.rs  render.rs
crates/protide-ui/src/panels/explorer/: env.rs  env_input.rs  history.rs  init.rs  mod.rs  render.rs  render_env.rs  render_env_editor.rs  render_history.rs  render_inputs.rs  render_tree.rs  render_tree_row.rs  tree_nav.rs  tree_ops.rs  util.rs  workspace.rs  workspace_io.rs
crates/protide-ui/src/panels/mock_server/: mod.rs  render.rs  render_form.rs
crates/protide-ui/src/panels/request/: body.rs  codegen.rs  draft_load.rs  draft_save.rs  editing_keys.rs  editing_kv.rs  editing_text.rs  editing_url.rs  execution_auth.rs  execution_grpc.rs  execution_http.rs  execution_sio.rs  execution_trpc.rs  execution_ws.rs  graphql.rs  import.rs  init.rs  mod.rs  panel_state.rs  render.rs  render_auth.rs  render_auth_basic_apikey.rs  render_auth_content.rs  render_body.rs  render_body_form.rs  render_data.rs  render_dropdowns.rs  render_graphql_query.rs  render_graphql_schema.rs  render_grpc.rs  render_grpc_proto.rs  render_http.rs  render_import.rs  render_kv.rs  render_scripts.rs  render_settings.rs  render_socketio.rs  render_socketio_helpers.rs  render_tab_router.rs  render_trpc.rs  (+9 more)
crates/protide-ui/src/panels/response/: json.rs  mod.rs  render.rs  render_body.rs  render_content.rs  render_extract.rs  render_headers.rs  render_html_preview.rs  render_json.rs  render_json_row.rs  render_tests.rs  render_util.rs  tests_gpui.rs  types.rs
crates/protide-ui/src/panels/runner/: mod.rs  render.rs
crates/protide-ui/src/ui/: main_window.rs  mod.rs
crates/protide-ui/src/ui/components/: action_row.rs  button.rs  icons.rs  mod.rs  modal.rs  selectable_text.rs  text_input.rs  ui_helpers.rs
crates/protide-ui/src/ui/components/code_editor/: highlight.rs  mod.rs
crates/protide-ui/src/ui/main_window/: mod.rs  overlays.rs  render.rs  sync.rs
crates/protide-ui/src/ui/panels/: console.rs  explorer.rs  history.rs  mock_server.rs  mod.rs  presence.rs  request_types.rs  response.rs
crates/protide-ui/src/ui/panels/docs/: mod.rs  render.rs
crates/protide-ui/src/ui/panels/explorer/: env.rs  env_input.rs  init.rs  mod.rs  render.rs  render_env.rs  render_env_editor.rs  render_inputs.rs  render_tree.rs  render_tree_row.rs  tree_nav.rs  tree_ops.rs  tree_scan.rs  workspace.rs
crates/protide-ui/src/ui/panels/mock_server/: mod.rs
crates/protide-ui/src/ui/panels/request/: body.rs  codegen.rs  draft_load.rs  import.rs  (+37 more)
crates/protide/src/: main.rs
(+78 files in other folders)
