[workspace]
resolver = "2"
members = [
    "crates/http-parser",
    "crates/api-dash",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/user/api-dash"
authors = ["API Dash Contributors"]

[workspace.dependencies]
# Parser crate
http-parser = { path = "crates/http-parser" }

# UI Framework - same git spec as gpui-component so Cargo unifies to one commit
gpui = { git = "https://github.com/zed-industries/zed", features = ["wayland"] }
gpui_platform = { git = "https://github.com/zed-industries/zed", package = "gpui_platform", features = ["wayland", "x11"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component-assets" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# URL/encoding
url = "2"
urlencoding = "2"
base64 = "0.22"

# JSONPath for request chaining
jsonpath-rust = "0.7"

# Error handling
anyhow = "1"
thiserror = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking", "multipart"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# File watching
notify = "7"

# Paths
dirs = "6"

# JavaScript engine
rquickjs = { version = "0.6", features = ["classes", "properties"] }

# HTTP server for mock server
axum = "0.8"
hyper = { version = "1", features = ["full"] }
tower = "0.5"

# WebSocket client
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# gRPC client
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
prost-reflect = "0.14"
