[workspace]
resolver = "2"
members = [
    "crates/http-parser",
    "crates/protide-core",
    "crates/protide-ui",
    "crates/protide",
    "crates/protide-mcp",
    "crates/protide-lsp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/dreygur/protide"
authors = ["Protide Contributors"]

[workspace.dependencies]
# Internal crates
http-parser = { path = "crates/http-parser" }
protide-core = { path = "crates/protide-core" }
protide-ui = { path = "crates/protide-ui" }

# UI Framework - same git spec as gpui-component so Cargo unifies to one commit
gpui = { git = "https://github.com/zed-industries/zed", features = ["wayland"] }
gpui_platform = { git = "https://github.com/zed-industries/zed", package = "gpui_platform", features = ["wayland", "x11"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component-assets" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# URL/encoding
url = "2"
urlencoding = "2"
base64 = "0.22"

# JSONPath for request chaining
jsonpath-rust = "0.7"

# Error handling
anyhow = "1"
thiserror = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking", "multipart", "http2", "stream"] }

# Image loading (for app icon)
image = { version = "0.25", default-features = false, features = ["png"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

# File watching
notify = "7"

# P2P networking
libp2p = { version = "0.56", features = ["tokio", "tcp", "quic", "dns", "noise", "yamux", "kad", "mdns", "gossipsub", "identify", "macros"] }

# PAKE cryptography
spake2 = "0.4"
chacha20poly1305 = "0.10"
blake3 = "1"
rand = "0.8"
zeroize = { version = "1", features = ["zeroize_derive"] }



# Paths
dirs = "6"

# JavaScript engine
rquickjs = { version = "0.6", features = ["classes", "properties"] }

# HTTP server for mock server
axum = "0.8"
hyper = { version = "1", features = ["full"] }
tower = "0.5"

# Async channels (executor-agnostic, used by GPUI/smol)
async-channel = "2"

# WebSocket client
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# Language server
tower-lsp = "0.20"

# gRPC client
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
prost-reflect = { version = "0.14", features = ["serde"] }
protox = "0.7"

# CSV parsing for data-driven testing
csv = "1.3"

# Git integration
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
