[package]
name = "api-dash"
description = "Free and open-source API testing application"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "api-dash"
path = "src/main.rs"

[dependencies]
# Internal crates
http-parser = { workspace = true }

# UI Framework
gpui = { workspace = true }
gpui_platform = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }

# OAuth
oauth2 = "5"

# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# URL/encoding
url = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }

# JSONPath for request chaining
jsonpath-rust = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
notify = { workspace = true }
rfd = "0.17"

# JavaScript engine for scripting
rquickjs = { workspace = true }

# HTTP server for mock server
axum = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }

# WebSocket client
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# gRPC client
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
prost-reflect = { workspace = true }
protox = { workspace = true }

[dev-dependencies]
# Standard unit tests - no additional dependencies needed
