[package]
name = "protide-core"
description = "Business logic for Protide — HTTP, WS, gRPC, scripting, workspace"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "protide_core"
path = "src/lib.rs"

[dependencies]
http-parser = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

url = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }

jsonpath-rust = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
notify = { workspace = true }

rquickjs = { workspace = true }

axum = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }

tokio = { workspace = true }
reqwest = { workspace = true }

tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
prost-reflect = { workspace = true }
protox = { workspace = true }
