[package]
name = "protide-mcp"
description = "MCP stdio server for Protide — exposes HTTP execution as AI-callable tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "protide-mcp"
path = "src/main.rs"

[dependencies]
protide-core = { path = "../protide-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
