[package]
name = "protide-ui"
description = "GPUI interface for Protide"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "protide_ui"
path = "src/lib.rs"

[dependencies]
protide-core = { path = "../protide-core" }
http-parser = { workspace = true }

gpui = { workspace = true }
gpui_platform = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }

log = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }

rfd = "0.17"
reqwest = { workspace = true }
